# cited-market-brief-agent

./: .env.example  .env.staging.example  .gitignore  Makefile  README.md  docker-compose.staging.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: deps.py
backend/app/api/routes/: briefs.py  changes.py  exports.py  feedback.py  fund_attribution.py  health.py  market_radar.py  watchlists.py
backend/app/briefs/: generator.py  guardrails.py  markdown.py  review.py  schemas.py  service.py  translation.py  validator.py
backend/app/changes/: filing_diff.py  macro_delta.py  service.py
backend/app/connectors/: alpha_vantage.py  bbc.py  finance_rss.py  fred.py  gdelt.py  nyt.py  sec_edgar.py  twse.py
backend/app/core/: config.py  middleware.py  security.py
backend/app/db/: base.py  models.py  rls.py
backend/app/evals/: fixtures.py  harness.py
backend/app/exports/: bundle.py  html_report.py  pdf.py  pptx_export.py  service.py  xlsx_export.py
backend/app/fund_attribution/: __init__.py  schemas.py  service.py  store.py
backend/app/ingestion/: pipeline.py  sec_parser.py
backend/app/market_radar/: __init__.py  schemas.py  service.py
backend/app/rag/: embeddings.py  retrieval.py
backend/app/services/: audit.py
backend/app/sources/: __init__.py  policy.py
backend/app/storage/: raw_store.py
backend/scripts/: apply_rls.py  backup_restore_test.sh  bootstrap_db.py  demo_brief.py  pilot_metrics.py  prewarm_translations.py  refresh_fund_attribution.py  run_evals.py  run_scheduled.py  run_scheduled_local.ps1  seed_watchlists.py
backend/tests/: conftest.py  test_evals.py  test_exports.py  test_filing_diff.py  test_fund_attribution.py  test_generator_offline.py  test_guardrails.py  test_health.py  test_macro_delta.py  test_markdown.py  test_market_radar.py  test_review.py  test_rls_coverage.py  test_rrf.py  test_sec_parser.py  test_security_middleware.py  test_translation.py  test_validator.py
docs/: DEPLOYMENT_AND_MOBILE.md  DEPLOY_DEMO.md  DESIGN_SYSTEM.md  EVALUATION_REPORT.md  FUND_ATTRIBUTION_PLAN.md  LedgerBrief_Demo.pptx  PRODUCTION_DEVELOPMENT_PLAN_LEGACY.md  PRODUCTION_PLAN.md  SECURITY.md  STAGING_DEPLOY_AWS_LIGHTSAIL.md  STAGING_DEPLOY_DIGITALOCEAN.md  TAIWAN_MORNING_MARKET_RADAR_PLAN.md  UI_REDESIGN_BRIEF.md
docs/adr/: 0001-two-workspace-routes.md
docs/claims/: claim-ledger.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.capture.config.ts  playwright.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx
frontend/app/brief/: page.tsx
frontend/app/components/: ApprovalChecklist.tsx  BriefCanvas.tsx  ChangesPanel.tsx  EvidenceLedger.tsx  EvidenceRail.tsx  FundAttributionPanel.tsx  FundHoldingsParser.tsx  MarketContextStrip.tsx  MorningMarketDashboard.tsx  OnboardingGuide.tsx  OvernightRiskRail.tsx  RadarDataStatus.tsx  (+12 more)
frontend/capture/: readme.spec.ts
frontend/e2e/: regional-workspaces.spec.ts
frontend/lib/: api.ts  demo-data.ts  news.test.ts  news.ts  radar-i18n.test.ts  radar-i18n.ts  regional-behaviour.test.ts  regions.ts  route-contract.test.ts  sector-config.test.ts  sector-config.ts
frontend/public/: sw.js
infra/: README.md
infra/staging/: Caddyfile  bootstrap_ubuntu.sh  install_cron.sh
pilot/: CASE_STUDY.md  ERROR_LOG.md  PILOT_RUNBOOK.md
