[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cited-market-brief-agent-api"
version = "1.0.0"
description = "Cited Market Brief Agent API - audit-ready public-data brief engine"
authors = [{ name = "Cheng-Yuan King", email = "rosscyking1115@gmail.com" }]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136",
    "starlette>=1.3.1",      # PYSEC-2026-249 (transitive via fastapi)
    "uvicorn[standard]>=0.34",
    "pydantic>=2.13",
    "pydantic-settings>=2.14.2",  # GHSA-4xgf-cpjx-pc3j
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pgvector>=0.4.2,<0.5",  # Python adapter; DB extension stays pinned at pgvector >=0.8.2
    "httpx>=0.28",
    "litellm>=1.88.1",       # supply-chain incident in 1.82.7/1.82.8 — do not lower
    "edgartools>=4.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "croniter>=3.0",
    "python-pptx>=1.0",      # core exports (PPTX); flagged low-maintenance but stable
    "openpyxl>=3.1.5",       # core exports (XLSX) with formula-injection escaping
    "pyjwt[crypto]>=2.10",   # OIDC bearer-token validation via JWKS
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
]
parsing = [
    "docling>=2.15",         # IR PDFs (Phase 1+); EDGAR uses edgartools
]
exports = [
    "playwright>=1.50",      # PDF (sandboxed: JS + network disabled); run: playwright install chromium
]
s3 = [
    "boto3>=1.35",           # raw source store on S3/MinIO (dev default is local FS)
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
# S101: assert in tests. UP042: StrEnum would change SQLAlchemy enum str() semantics.
ignore = ["S101", "UP042"]

[tool.ruff.lint.per-file-ignores]
# FastAPI Depends()/Query() in signature defaults are idiomatic (B008).
"app/api/routes/*" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
